[package]
name = "flightime-backend"
version = "0.1.0"
authors = ["Matt Turner <matturner@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
gotham = "0.3"
gotham_derive = "0.3"
hyper = "*"
mime = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.4"
slog-async = "2.3"